<resources>
    <string name="app_name">google_maps_app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Профиль</string>
    <string name="menu_history">История поездок</string>
    <string name="menu_lovely_addr">Любимые адреса</string>
    <string name="menu_payment">Способ оплаты</string>
    <string name="menu_taxi_service">Службы такси</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_info">Информация</string>
    <string name="menu_support">Поддержка</string>

    <string name="address">Адрес</string>
    <string name="registration">Регистрация</string>
    <string name="options">Опции</string>
    <string name="change_address">Изменить адрес</string>
    <string name="where">Куда?</string>
    <string name="order">Заказать</string>
    <string name="phone">Телефон:</string>
    <string name="password">Пароль:</string>
    <string name="language">Язык интерфейса</string>
    <string name="current_location">Текущее местоположение</string>
    <string name="economy">Эконом</string>
    <string name="business">Бизнес</string>
    <string name="comfort">Комфорт</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="vk">Вконтакте</string>
    <string name="save">Сохранить</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="nameplace_meet">Встреча с табличкой</string>
    <string name="pet_place">Провоз животных</string>
    <string name="child_place">Детское кресло</string>
    <string name="not_smoke">Некурящий салон</string>

    <string-array name="d_language">
        <item>Русский</item>
        <item>Английский</item>
    </string-array>

    <string-array name="d_taxi">
    <item>Такси “Сибирь” - 120р</item>
    <item>ООО “Скартель” - 183 руб</item>
        <item>АО “Сбертакс” - 290 руб.</item>
        <item>АО “Сбертакс” - 320 руб.</item>
</string-array>
    <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCHig6bBRMbwaWVzXoBJp0P06VhrMeJ0UI</string>-->
</resources>
