<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/taxi_info"
                                                   android:clickable="true"
                                                   android:background="#F7F2F2"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView
            android:id="@+id/back"
            android:src="@drawable/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="340dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@android:color/black"/>

    <LinearLayout
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/back"
            android:weightSum="1">

        <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:text="@string/phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/shape_edit"
                android:hint="+7"
                android:inputType="phone"/>


    </LinearLayout>

    <LinearLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/phone"
            android:weightSum="1">

        <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/shape_edit"
                android:inputType="textPassword"
                android:layout_marginRight="32dp"/>


    </LinearLayout>

    <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="46dp"
            android:orientation="horizontal">

        <Button
                android:id="@+id/vk"
                android:layout_width="294px"
                android:layout_height="84px"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="23dp"
                android:background="@drawable/bg_vk"
                android:foregroundGravity="center"
                android:text="@string/vk"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="12dp"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="VectorDrawableCompat"/>

        <Button
                android:id="@+id/fb"
                android:layout_width="294px"
                android:layout_height="84px"
                android:layout_marginBottom="23dp"
                android:background="@drawable/bg_fb"
                android:text="@string/facebook"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="12dp"/>

        <Button
                android:id="@+id/classmates"
                android:layout_width="294px"
                android:layout_height="84px"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="23dp"
                android:background="@drawable/bg_gl"
                android:textAllCaps="false"
                android:text="@string/google"
                android:textColor="@android:color/white"
                android:textSize="12dp"/>

    </LinearLayout>
    <Button
        android:id="@+id/save"
        android:layout_width="294px"
        android:layout_height="84px"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/bg_gl"
        android:textAllCaps="false"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@android:color/white"
        android:textSize="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>