<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/taxi_info"
                                                   android:clickable="true"
                                                   android:background="#F7F2F2"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView
            android:id="@+id/back"
            android:src="@drawable/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>

    <LinearLayout
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/back"
            android:weightSum="1">

        <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:text="@string/phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/shape_edit"
                android:hint="+7"
                android:inputType="phone"
                android:layout_marginRight="32dp"/>


    </LinearLayout>


    <LinearLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/phone"
            android:weightSum="1">

        <TextView
                android:layout_width="468px"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:text="@string/language"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <Spinner
                android:id="@+id/spinner_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:spinnerMode="dialog"
                android:backgroundTint="@color/colorPrimary"
                android:entries="@array/d_language"
                android:gravity="end"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginRight="27dp" />


    </LinearLayout>

    <Button
            android:id="@+id/exit"
            android:layout_width="590px"
            android:layout_height="84px"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="23dp"
            android:background="@drawable/bg_gl"
            android:textAllCaps="false"
            android:text="@string/exit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@android:color/white"
            android:textSize="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>